--- a/inner.html
+++ b/inner.html
@@ -17,7 +17,7 @@
 
         <a href="inner.html">О нас</a>
 
-        <a href="inner.html">Вакансии</a>
+        <a href="vacancy.html">Вакансии</a>
 
         <a href="inner.html">Форум</a>
 
