fix vacancy list fix meny

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <aside>
     <a href="/" id="logo"></a>
     <nav>
-        <a href="/" class="active">Игры</a>
+        <a href="index.html">Игры</a>
 
         <a href="inner.html">О нас</a>
 
