--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <aside>
     <a href="/" id="logo"></a>
     <nav>
-        <a href="/" class="active">Игры</a>
+        <a href="index.html">Игры</a>
 
         <a href="inner.html">О нас</a>
 
@@ -40,19 +40,19 @@
 <main>
         <section class="slide_1">
             <a href="inner.html" class="google-play"></a>
-            <a href="inner.html" class="other">Подробнее</a>
+            <a href="inner.html" class="button other">Подробнее</a>
         </section>
         <section class="slide_2">
             <a href="inner.html" class="google-play"></a>
-            <a href="inner.html" class="other">Подробнее</a>
+            <a href="inner.html" class="button other">Подробнее</a>
         </section>
         <section class="slide_1">
             <a href="inner.html" class="google-play"></a>
-            <a href="inner.html" class="other">Подробнее</a>
+            <a href="inner.html" class="button other">Подробнее</a>
         </section>
         <section class="slide_2">
             <a href="inner.html" class="google-play"></a>
-            <a href="inner.html" class="other">Подробнее</a>
+            <a href="inner.html" class="button other">Подробнее</a>
         </section>
     </main>
 </body>
