--- a/vacancy.html
+++ b/vacancy.html
@@ -13,7 +13,7 @@
 <aside>
     <a href="/" id="logo"></a>
     <nav>
-        <a href="/" class="active">Игры</a>
+        <a href="index.html">Игры</a>
 
         <a href="inner.html">О нас</a>
 
@@ -43,12 +43,13 @@
 
         <p>Мы ищем людей, которые разделят с нами стремление создавать продукты, приносящие радость миллионам игроков. Если вам интересна творческая работа и вы во всем стараетесь придерживаться высоких стандартов, мы приглашаем вас к сотрудничеству.</p>
 
-        <ul>
-            <li><a href="#manager">Руководитель проекта</a></li>
-            <li><a href="#c">C++ developer</a></li>
-            <li><a href="#designer">Web-дизайнер</a></li>
-            <li><a href="#javascript">Javascript developer</a></li>
-        </ul>
+        <div class="vacancy-list">
+            <a href="#manager" class="button">Руководитель проекта</a>
+            <a href="#c" class="button">C++ developer</a>
+            <a href="#designer" class="button">Web-дизайнер</a>
+            <a href="#javascript" class="button">Javascript developer</a>
+        </div>
+
         <h2>По вопросам трудоустройства обращаться:</h2>
         <p>Телефон: +7 (351) 248 84 63</p>
         <p>E-mail: job@itsrealgames.com</p>
