--- a/inner.html
+++ b/inner.html
@@ -13,7 +13,7 @@
 <aside>
     <a href="index.html" id="logo"></a>
     <nav>
-        <a href="index.html" class="active">Игры</a>
+        <a href="index.html">Игры</a>
 
         <a href="inner.html">О нас</a>
 
