--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <a href="vacancy.html">Вакансии</a>
 
-        <a href="inner.html">Форум</a>
+        <a href="http://forum.itsrealgames.com/">Форум</a>
 
         <a href="contact.html">Контакты</a>
     </nav>
@@ -44,15 +44,15 @@
         </section>
         <section class="slide_2">
             <a href="inner.html" class="google-play"></a>
-            <a href="inner.html" class="button other">Подробнее</a>
+            <a href="inner2.html" class="button other">Подробнее</a>
         </section>
         <section class="slide_3">
             <a href="inner.html" class="google-play"></a>
-            <a href="inner.html" class="button other">Подробнее</a>
+            <a href="inner3.html" class="button other">Подробнее</a>
         </section>
         <section class="slide_4">
             <a href="inner.html" class="google-play"></a>
-            <a href="inner.html" class="button other">Подробнее</a>
+            <a href="inner4.html" class="button other">Подробнее</a>
         </section>
     </main>
 </body>
