--- a/inner3.html
+++ b/inner3.html
@@ -33,15 +33,15 @@
 </aside>
 <main>
     <div class="inner">
-        <div class="inner-header slide_2">
-            <h1>Бутылочка</h1>
+        <div class="inner-header slide_3">
+            <h1>Азориум</h1>
             <div class="slider">
-                <a  href="inner.html"  class="left"></a>
-                <a  href="inner3.html"  class="right"></a>
+                <a  href="inner2.html"  class="left"></a>
+                <a  href="inner4.html"  class="right"></a>
             </div>
         </div>
         <div class="inner-content">
-            <p>Бутылочка — увлекательная игра для флирта, знакомства и общения. В игре есть все: подарки, открытки, чат, дружба, любовь, секс, отношения, поцелуи, парни, девчонки, бутылочка, флирт, эротика, вирт. Найди свою любовь!</p>
+            <p>Стань доблестным Капитаном и прими командование на себя! Вступай в борьбу за ресурсы и право называться лучшим Капитаном этой планеты! Только здесь тебя ждут увлекательные бои в реальном времени с другими игроками! Организуй оборону базы, прокачивай юнитов и особые способности.</p>
         </div>
     </div>
 </main>
