--- a/inner4.html
+++ b/inner4.html
@@ -33,15 +33,15 @@
 </aside>
 <main>
     <div class="inner">
-        <div class="inner-header slide_2">
-            <h1>Бутылочка</h1>
+        <div class="inner-header slide_4">
+            <h1>Игра Богов</h1>
             <div class="slider">
-                <a  href="inner.html"  class="left"></a>
-                <a  href="inner3.html"  class="right"></a>
+                <a  href="inner3.html"  class="left"></a><!--
+                --><span class="right"></span>
             </div>
         </div>
         <div class="inner-content">
-            <p>Бутылочка — увлекательная игра для флирта, знакомства и общения. В игре есть все: подарки, открытки, чат, дружба, любовь, секс, отношения, поцелуи, парни, девчонки, бутылочка, флирт, эротика, вирт. Найди свою любовь!</p>
+            <p>Многопользовательская казуальная игра в стиле «три в ряд». Побеждайте соперников и поднимайтесь на вершину Олимпа!</p>
         </div>
     </div>
 </main>
