--- a/vacancy.html
+++ b/vacancy.html
@@ -19,7 +19,7 @@
 
         <a href="vacancy.html">Вакансии</a>
 
-        <a href="inner.html">Форум</a>
+        <a href="http://forum.itsrealgames.com/">Форум</a>
 
         <a href="contact.html">Контакты</a>
     </nav>
