--- a/inner.html
+++ b/inner.html
@@ -48,11 +48,24 @@
         <div class="inner-header">
             <div id="owl-demo" class="inner-header owl-carousel owl-theme">
 
-                <div class="item"><img src="img/sliders/1/sh_1_r.png" /></div>
-                <div class="item"><img src="img/sliders/1/sh_2_r.png" /></div>
-                <div class="item"><img src="img/sliders/1/sh_3_r.png" /></div>
-                <div class="item"><img src="img/sliders/1/sh_4_r.png" /></div>
-                <div class="item"><img src="img/sliders/1/sh_5_r.png" /></div>
+                <div class="item">
+                    <div style="background: url('img/work1.jpg') no-repeat scroll center/cover transparent;"></div>
+                </div>
+                <div class="item">
+                    <div style="background: url('img/sliders/1/sh_1_r.png') no-repeat scroll center/cover transparent;"></div>
+                </div>
+                <div class="item">
+                    <div style="background: url('img/sliders/1/sh_2_r.png') no-repeat scroll center/cover transparent;"></div>
+                </div>
+                <div class="item">
+                    <div style="background: url('img/sliders/1/sh_3_r.png') no-repeat scroll center/cover transparent;"></div>
+                </div>
+                <div class="item">
+                    <div style="background: url('img/sliders/1/sh_4_r.png') no-repeat scroll center/cover transparent;"></div>
+                </div>
+                <div class="item">
+                    <div style="background: url('img/sliders/1/sh_5_r.png') no-repeat scroll center/cover transparent;"></div>
+                </div>
 
             </div>
             <h1>Трагедия белок</h1>
@@ -71,14 +84,8 @@
             navigationText: ['', ''],
             slideSpeed : 300,
             pagination : false,
-            singleItem:true
-
-            // "singleItem:true" is a shortcut for:
-            // items : 1,
-            // itemsDesktop : false,
-            // itemsDesktopSmall : false,
-            // itemsTablet: false,
-            // itemsMobile : false
+            singleItem:true,
+            autoPlay: 3000
 
         });
 
