--- a/inner2.html
+++ b/inner2.html
@@ -7,6 +7,18 @@
      тут описано зачем это нужно - http://habrahabr.ru/post/45296/ -->
     <link rel='stylesheet' type='text/css' href='css/reset.css'>
     <link rel='stylesheet' type='text/css' href='css/style.css'>
+    <link rel='stylesheet' type='text/css' href='css/carusel/owl.carousel.css'>
+    <link rel='stylesheet' type='text/css' href='css/carusel/owl.transitions.css'>
+    <link rel='stylesheet' type='text/css' href='css/carusel/owl.theme.css'>
+    <style>
+        #owl-demo .item img{
+            display: block;
+            width: 100%;
+            height: auto;
+        }
+    </style>
+    <script src="js/jquery-1.9.1.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <title></title>
 </head>
 <body>
@@ -33,17 +45,59 @@
 </aside>
 <main>
     <div class="inner">
-        <div class="inner-header slide_2">
-            <h1>Бутылочка</h1>
-            <div class="slider">
-                <a  href="inner.html"  class="left"></a>
-                <a  href="inner3.html"  class="right"></a>
+        <div class="inner-header">
+            <div id="owl-demo" class="inner-header owl-carousel owl-theme">
+
+                <div class="item">
+                    <div style="background: url('img/work2.jpg') no-repeat scroll center/cover transparent;"></div>
+                </div>
+                <div class="item">
+                    <div style="background: url('img/sliders/2/bt_1_r.jpg') no-repeat scroll center/cover transparent;"></div>
+                </div>
+                <div class="item">
+                    <div style="background: url('img/sliders/2/bt_2_r.jpg') no-repeat scroll center/cover transparent;"></div>
+                </div>
+                <div class="item">
+                    <div style="background: url('img/sliders/2/bt_3_r.jpg') no-repeat scroll center/cover transparent;"></div>
+                </div>
+                <div class="item">
+                    <div style="background: url('img/sliders/2/bt_4_r.jpg') no-repeat scroll center/cover transparent;"></div>
+                </div>
+                <div class="item">
+                    <div style="background: url('img/sliders/2/bt_5_r.jpg') no-repeat scroll center/cover transparent;"></div>
+                </div>
+                <div class="item">
+                    <div style="background: url('img/sliders/2/bt_6_r.jpg') no-repeat scroll center/cover transparent;"></div>
+                </div>
+                <div class="item">
+                    <div style="background: url('img/sliders/2/bt_7_r.jpg') no-repeat scroll center/cover transparent;"></div>
+                </div>
+                <div class="item">
+                    <div style="background: url('img/sliders/2/bt_8_r.jpg') no-repeat scroll center/cover transparent;"></div>
+                </div>
+
             </div>
+            <h1>Бутылочка</h1>
         </div>
         <div class="inner-content">
             <p>Бутылочка — увлекательная игра для флирта, знакомства и общения. В игре есть все: подарки, открытки, чат, дружба, любовь, секс, отношения, поцелуи, парни, девчонки, бутылочка, флирт, эротика, вирт. Найди свою любовь!</p>
         </div>
     </div>
 </main>
+<script>
+    $(document).ready(function() {
+
+        $("#owl-demo").owlCarousel({
+
+            navigation : true,
+            navigationText: ['', ''],
+            slideSpeed : 300,
+            pagination : false,
+            singleItem:true
+
+        });
+
+    });
+</script>
 </body>
 </html>
